<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CartFragment"
    android:padding="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="12dp"
        >

        <TextView
            android:fontFamily="sans-serif-black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-2dp"
            android:text="@string/tokomeriah"
            android:textColor="#7AA874"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart"
            android:textSize="32sp"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/ic_shopping_cart"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/img_sepatu"/>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_shoes"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_sepatu"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_remove"
                            android:backgroundTint="#F6F1F1"
                            android:contentDescription="@string/btn_min"
                            android:background="@drawable/image_botton_radius"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_amount"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            android:backgroundTint="#F6F1F1"
                            android:background="@drawable/image_botton_radius"
                            android:contentDescription="@string/btn_add"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
<!--produk 2-->
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/img_poco"/>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_smartphone"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_smartphone"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_remove"
                            android:backgroundTint="#F6F1F1"
                            android:contentDescription="@string/btn_min"
                            android:background="@drawable/image_botton_radius"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_amount"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            android:backgroundTint="#F6F1F1"
                            android:background="@drawable/image_botton_radius"
                            android:contentDescription="@string/btn_add"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
<!--    produk 3-->
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/img_watch"/>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_watch"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_watch"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_remove"
                            android:backgroundTint="#F6F1F1"
                            android:contentDescription="@string/btn_min"
                            android:background="@drawable/image_botton_radius"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_amount"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            android:backgroundTint="#F6F1F1"
                            android:background="@drawable/image_botton_radius"
                            android:contentDescription="@string/btn_add"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
<!--    produk 4-->
    <androidx.cardview.widget.CardView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:contentPadding="4dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
            <ImageView
                android:layout_gravity="center"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:src="@drawable/img_ponds"/>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_skincare"
                    android:textStyle="bold"/>
                <RelativeLayout
                    android:layout_margin="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start">
                    <TextView
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_skincare"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true">
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_remove"
                            android:backgroundTint="#F6F1F1"
                            android:contentDescription="@string/btn_min"
                            android:background="@drawable/image_botton_radius"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/order_amount"
                            android:textSize="20sp"
                            android:layout_gravity="center"
                            android:layout_margin="8dp"/>
                        <ImageButton
                            android:minHeight="48dp"
                            android:minWidth="48dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_add"
                            android:backgroundTint="#F6F1F1"
                            android:background="@drawable/image_botton_radius"
                            android:contentDescription="@string/btn_add"/>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:layout_marginTop="24dp"
        android:layout_margin="12dp"
        android:layout_gravity="center"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:backgroundTint="#3E54AC"
        android:textColor="#fff"
        android:textSize="20sp"
        android:id="@+id/elevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Checkout"
        />


</LinearLayout>