<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:padding="8dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:fontFamily="sans-serif-black"
        android:layout_margin="12dp"
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tokomeriah"
        android:textColor="#7AA874"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
   <LinearLayout
       android:layout_below="@+id/title"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/img_tokopedia" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/product_category"
           android:textStyle="bold"
           android:layout_marginBottom="8dp"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:gravity="center">
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:contentPadding="4dp"
               android:layout_weight="1">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="64dp"
                       android:src="@drawable/img_poco"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/smartphone"
                       android:textStyle="bold"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:contentPadding="4dp"
               android:layout_weight="1">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="64dp"
                       android:src="@drawable/img_sepatu"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Shoes"
                       android:textStyle="bold"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:contentPadding="4dp"
               android:layout_weight="1">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="64dp"
                       android:src="@drawable/img_watch"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Watch"
                       android:textStyle="bold"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:contentPadding="4dp"
               android:layout_weight="1">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="64dp"
                       android:src="@drawable/img_ponds"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/skincare"
                       android:textStyle="bold"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:contentPadding="4dp"
               android:layout_weight="1">
               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">
                   <ImageView
                       android:layout_width="64dp"
                       android:layout_height="64dp"
                       android:src="@drawable/img_electronic"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/electronic"
                       android:textStyle="bold"/>
               </LinearLayout>
           </androidx.cardview.widget.CardView>
       </LinearLayout>
   </LinearLayout>

</RelativeLayout>